--- a/app/src/main/res/layout/row_view_of_pokemon_list.xml
+++ b/app/src/main/res/layout/row_view_of_pokemon_list.xml
@@ -44,7 +44,7 @@
         style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
+        android:id="@+id/hpBar"
         android:layout_alignTop="@+id/nameText"
         android:layout_toRightOf="@+id/levelText"
         android:layout_toEndOf="@+id/levelText"
@@ -59,8 +59,8 @@
         android:text="170"
         android:id="@+id/currentHP"
         android:layout_alignTop="@+id/levelText"
-        android:layout_alignLeft="@+id/progressBar"
-        android:layout_alignStart="@+id/progressBar" />
+        android:layout_alignLeft="@+id/hpBar"
+        android:layout_alignStart="@+id/hpBar" />
 
     <TextView
         android:layout_width="wrap_content"
