--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="detail_view_field_width">50dp</dimen>
     <dimen name="detail_view_field_top_margin">40dp</dimen>
+    <dimen name="detail_view_skill_top_margin">20dp</dimen>
 </resources>
