--- a/app/src/main/res/layout/activity_new_main.xml
+++ b/app/src/main/res/layout/activity_new_main.xml
@@ -45,7 +45,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/loadingBar"
             android:layout_centerInParent="true"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            android:indeterminate="true" />
 
         <RadioGroup
             android:layout_width="wrap_content"
